--- a/atividadeCSS/cadastro.html
+++ b/atividadeCSS/cadastro.html
@@ -36,36 +36,42 @@
     </div>
   </div>
   <!--header fim-->
-
-  <div class="login">
-
+   
+  <div class="banner">
     <div class="container">
-      <div class="card card-cadastro">
-        <h2>Bem-vindo!</h2>
-        <div class="formulario">
-          <div class="campo">
-            <span>Código de ativação:</span>
+ 
+
+      <div class="login">
+
+        <div class="card card-cadastro">
+            <h2>Bem-vindo!</h2>
+            <div class="formulario">
+              <div class="campo">
+            <span>Código de ativação:</span><br>
             <input id="codigo_input" type="text" placeholder="Insira aqui seu código" />
-          </div>
+              </div>
           <div class="campo">
-            <span>Nome:</span>
+            <span>Nome:</span><br>
             <input id="nome_input" type="text" placeholder="Seu nome" />
           </div>
           <div class="campo">
-            <span>E-mail:</span>
+            <span>E-mail:</span><br>
             <input id="email_input" type="text" placeholder="meuemail@provedor.com" />
           </div>
           <div class="campo">
-            <span>Senha:</span>
+            <span>Senha:</span><br>
             <input id="senha_input" type="password" placeholder="******" />
           </div>
           <div class="campo">
-            <span>Confirmação da Senha:</span>
-            <input id="confirmacao_senha_input" type="password" placeholder="******" />
+            <span>Confirmação da Senha:</span><br>
+              <input id="confirmacao_senha_input" type="password" placeholder="******" />
+              </div>
+              </div>
+            <button class="botao">Cadastrar</button>
           </div>
-          <button class="botao">Cadastrar</button>
         </div>
       </div>
+
     </div>
   </div>
 
