--- a/atividadeCSS/index.html
+++ b/atividadeCSS/index.html
@@ -34,37 +34,43 @@
         </ul>
       </div>
     </div>
-  
-    <div class="banner">
+    <div>
+    <div class="bannerIndex">
       <div class="container">
         <p>Preservando <span>hoje</span> para existirem <span>amanhã</span>.</p>
       </div>
     </div>
-  
+    </div>
     <div class="social">
       <div class="container">
         <div class="boxes">
           <div class="box">
-            <img src="../public/assets/imgs/planet-earth_color.png">
-            <h4>Missão</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
               vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
               minima.</p>
+              <div class="imagemTitulo">
+              <img src="../atividadeCSS/assets/imgs/planet-earth_color.png">
+              <h4>Missão</h4>
+              </div>
           </div>
 
           <div class="box">
-            <img src="../public/assets/imgs/lightbulb_color.png">
-            <h4>Visão</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
               vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
               minima.</p>
+              <div class="imagemTitulo">
+              <img src="../atividadeCSS/assets/imgs/lightbulb_color.png">
+              <h4>Visão</h4>
+              </div>
           </div>
           <div class="box">
-            <img src="../public/assets/imgs/growth_color.png">
-            <h4>Valores</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
               vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
               minima.</p>
+              <div class="imagemTitulo">
+              <img src="../atividadeCSS/assets/imgs/growth_color.png" >
+              <h4>Valores</h4>
+              </div>
           </div>
         </div>
       </div>
